<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>de.spricom.dessert</groupId>
        <artifactId>dessert-site-parent</artifactId>
        <version>0.5.2-SNAPSHOT</version>
    </parent>

    <artifactId>dessert-sample</artifactId>

    <dependencies>
        <!-- tag::dep[] -->
        <dependency>
            <groupId>de.spricom.dessert</groupId>
            <artifactId>dessert-core</artifactId>
            <version>0.5.2-SNAPSHOT</version>
            <scope>test</scope>
        </dependency>
        <!-- end::dep[] -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.18.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <!-- tag::repo[] -->
    <repositories>
        <repository>
            <id>ossrh</id>
            <name>OSSRH Snapshot Repository</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>
    <!-- end::repo[] -->

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>DessertSampleTest</exclude>
                        <exclude>CycleTest</exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>